create clients component Closes #10

--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header></app-header>
-<app-register></app-register>
+<app-clients></app-clients>
+<!--<app-register></app-register>-->
 <app-footer></app-footer>
