create options component and editing header Closes #11

--- a/front-end/src/app/components/clients/clients.component.html
+++ b/front-end/src/app/components/clients/clients.component.html
@@ -2,13 +2,14 @@
   <thead>
   <tr>
     <th scope="col">#ID</th>
-    <th scope="col">Full Name</th>
-    <th scope="col">Gender</th>
-    <th scope="col">Phone Number</th>
-    <th scope="col">Age</th>
-    <th scope="col">Address</th>
-    <th scope="col">Created Date</th>
-    <th scope="col">Visit Date</th>
+    <th scope="col">Имя</th>
+    <th scope="col">пол</th>
+    <th scope="col">Номер телефона</th>
+    <th scope="col">Возраст</th>
+    <th scope="col">Адрес</th>
+    <th scope="col">Создан</th>
+    <th scope="col">Последний визит</th>
+    <th scope="col"></th>
   </tr>
   </thead>
   <tbody>
@@ -21,6 +22,12 @@
     <td>Kazan</td>
     <td>12.12.12</td>
     <td>12.12.12</td>
+    <td>
+      <button class="btn btn-success">Update</button>
+      <button class="btn btn-danger">Delete</button>
+    </td>
   </tr>
   </tbody>
 </table>
+
+<button class="btn btn-primary">Add</button>
