--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
-<app-clients></app-clients>
+<app-options></app-options>
+<!--<app-clients></app-clients>-->
 <!--<app-register></app-register>-->
 <app-footer></app-footer>
