--- a/front-end/src/app/components/register/register.component.html
+++ b/front-end/src/app/components/register/register.component.html
@@ -4,7 +4,7 @@
   </div>
 
   <div class="mt-3">
-    <input type="text" class="form-control" placeholder="Password">
+    <input type="password" class="form-control" placeholder="Password">
   </div>
 
   <div>
