--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
-<app-options></app-options>
+<!--<app-options></app-options>-->
+<app-products></app-products>
 <!--<app-clients></app-clients>-->
 <!--<app-register></app-register>-->
 <app-footer></app-footer>
