--- a/front-end/src/app/components/product-options/product-options.component.html
+++ b/front-end/src/app/components/product-options/product-options.component.html
@@ -8,7 +8,7 @@
   </div>
 
   <div class="mt-3">
-    <input type="number" class="form-control" placeholder="Готово к продаже" aria-label="Phone Number">
+    <input type="number" class="form-control" placeholder="Готово к продаже" aria-label="In Stock">
   </div>
 
   <div>
