Routes an Router-outlet Closes #18

--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
+<router-outlet></router-outlet>
 <!--<app-client-options></app-client-options>-->
-<app-product-options></app-product-options>
+<!--<app-product-options></app-product-options>-->
 <!--<app-products></app-products>-->
 <!--<app-clients></app-clients>-->
 <!--<app-register></app-register>-->
