Handle routes and router-link Closes #19

--- a/front-end/src/app/components/client-options/client-options.component.html
+++ b/front-end/src/app/components/client-options/client-options.component.html
@@ -20,6 +20,6 @@
   </div>
 
   <div>
-    <button class="btn btn-primary mt-3"> Создать </button>
+    <button class="btn btn-primary mt-3"> Добавить </button>
   </div>
 </div>
