--- a/front-end/src/app/components/clients/clients.component.html
+++ b/front-end/src/app/components/clients/clients.component.html
@@ -23,7 +23,7 @@
     <td>12.12.12</td>
     <td>12.12.12</td>
     <td>
-      <button class="btn btn-success">Update</button>
+      <button class="btn btn-success" routerLink="/client_options">Update</button>
       <button class="btn btn-danger">Delete</button>
     </td>
   </tr>
