--- a/front-end/src/app/components/products/products.component.html
+++ b/front-end/src/app/components/products/products.component.html
@@ -15,7 +15,7 @@
     <td>400</td>
     <td>12.12.12</td>
     <td>
-      <button class="btn btn-success">Update</button>
+      <button class="btn btn-success" routerLink="/product_options">Update</button>
       <button class="btn btn-danger">Delete</button>
     </td>
   </tr>
