--- a/front-end/src/app/components/header/header.component.html
+++ b/front-end/src/app/components/header/header.component.html
@@ -1,16 +1,13 @@
 <nav class="navbar navbar-expand-lg dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Хэлэл продукт</a>
+    <a class="navbar-brand" href="products">Хэлэл продукт</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          <a class="nav-link active" aria-current="page" href="clients">Пользователи</a>
         </li>
       </ul>
       <form class="d-flex">
@@ -18,7 +15,7 @@
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
       <div class="control">
-        <button class="btn btn-outline-success" type="submit">Log In</button>
+        <button class="btn btn-outline-success" routerLink="register" type="submit">Log In</button>
         <button class="btn btn-outline-danger" type="submit">Log Out</button>
       </div>
     </div>
