--- a/front-end/src/app/components/footer/footer.component.css
+++ b/front-end/src/app/components/footer/footer.component.css
@@ -1,7 +1,7 @@
 .card {
   background-color: rgba(0, 0, 0, .7);
   color: white;
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
 }
