--- a/front-end/src/app/components/header/header.component.html
+++ b/front-end/src/app/components/header/header.component.html
@@ -4,19 +4,20 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <ul *ngIf="isAuthUser()" class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="clients">Пользователи</a>
         </li>
       </ul>
-      <form class="d-flex">
+      <form *ngIf="isAuthUser()" class="d-flex">
         <input class="form-control search" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
       <div class="control">
         <button class="btn btn-outline-success" routerLink="register" type="submit">Log In</button>
-        <button class="btn btn-outline-danger" type="submit">Log Out</button>
+        <button *ngIf="isAuthUser()" class="btn btn-outline-danger" type="submit">Log Out</button>
       </div>
     </div>
   </div>
