--- a/front-end/src/app/components/register/register.component.html
+++ b/front-end/src/app/components/register/register.component.html
@@ -1,13 +1,14 @@
-<div class="login">
-  <div class="mt-3">
-    <input type="text" class="form-control" placeholder="Username">
+<form [formGroup]="loginFormGroup" (ngSubmit)="OnSubmit()" class="login">
+  <div formGroupName="admin">
+    <div class="mt-3">
+      <input formControlName="username" type="text" class="form-control" placeholder="Username" aria-label="Username">
+    </div>
+    <div class="mt-3">
+      <input formControlName="password" type="password" class="form-control" placeholder="Password" aria-label="Password">
+    </div>
   </div>
 
-  <div class="mt-3">
-    <input type="password" class="form-control" placeholder="Password">
-  </div>
-
-  <div>
-    <button class="btn btn-primary mt-3"> Log IN</button>
-  </div>
-</div>
+    <div>
+      <button class="btn btn-primary mt-3"> Log IN</button>
+    </div>
+</form>
