--- a/front-end/src/app/components/clients/clients.component.html
+++ b/front-end/src/app/components/clients/clients.component.html
@@ -30,4 +30,4 @@
   </tbody>
 </table>
 
-<button class="btn btn-primary">Add</button>
+<button class="btn btn-primary" routerLink="/client_options">Add</button>
