--- a/front-end/src/app/components/products/products.component.html
+++ b/front-end/src/app/components/products/products.component.html
@@ -24,4 +24,4 @@
   </tbody>
 </table>
 
-<button class="btn btn-primary">Add</button>
+<button class="btn btn-primary" routerLink="/product_options">Add</button>
