--- a/front-end/src/app/components/products/products.component.html
+++ b/front-end/src/app/components/products/products.component.html
@@ -15,7 +15,7 @@
     <td>{{product.name}}</td>
     <td>{{product.price}}</td>
     <td>{{product.stock}}</td>
-    <td>{{product.created}}</td>
+    <td>{{product.dateCreated}}</td>
     <td>
       <button class="btn btn-success" routerLink="/product_options">Update</button>
       <button class="btn btn-danger">Delete</button>
