--- a/front-end/src/app/components/clients/clients.component.html
+++ b/front-end/src/app/components/clients/clients.component.html
@@ -1,3 +1,6 @@
+<div class="alert alert-danger" *ngIf="message">
+  {{message}}
+</div>
 <table class="table table-striped table-dark">
   <thead>
   <tr>
@@ -24,7 +27,7 @@
     <td>{{client.dateLastVisit}}</td>
     <td>
       <button class="btn btn-success" routerLink="/client_options">Update</button>
-      <button class="btn btn-danger">Delete</button>
+      <button class="btn btn-danger" (click)="deleteClient(client.id)">Delete</button>
     </td>
   </tr>
   </tbody>
