--- a/front-end/src/app/components/products/products.component.html
+++ b/front-end/src/app/components/products/products.component.html
@@ -1,3 +1,6 @@
+<div class="alert alert-danger" *ngIf="message">
+  {{message}}
+</div>
 <table class="table table-striped table-dark">
   <thead>
   <tr>
@@ -18,7 +21,7 @@
     <td>{{product.dateCreated}}</td>
     <td>
       <button class="btn btn-success" routerLink="/product_options">Update</button>
-      <button class="btn btn-danger">Delete</button>
+      <button class="btn btn-danger" (click)="deleteProduct(product.id)">Delete</button>
     </td>
   </tr>
   </tbody>
