--- a/front-end/src/app/components/client-options/client-options.component.html
+++ b/front-end/src/app/components/client-options/client-options.component.html
@@ -1,25 +1,31 @@
 <div class="create-client">
-  <div class="mt-3">
-    <input type="text" class="form-control" placeholder="Имя" aria-label="Full Name">
-  </div>
+  <form [formGroup]="clientGroup" (ngSubmit)="add()" class="login">
+    <div formGroupName="client">
+      <div class="mt-3" style="margin-bottom: 16px">
+        <input formControlName="userName" type="text" class="form-control" placeholder="Имя" aria-label="Full Name">
+      </div>
 
-  <div class="mt-3">
-    <input type="text" class="form-control" placeholder="пол" aria-label="Gender">
-  </div>
+      <select formControlName="gender" class="form-select" aria-label="Default select example">
+        <option value="MALE">М</option>
+        <option value="FEMALE">Ж</option>
+      </select>
 
-  <div class="mt-3">
-    <input type="text" class="form-control" placeholder="Номер телефона" aria-label="Phone Number">
-  </div>
+      <div class="mt-3">
+        <input formControlName="phone" type="text" class="form-control" placeholder="Номер телефона"
+               aria-label="Phone Number">
+      </div>
 
-  <div class="mt-3">
-    <input type="number" class="form-control" placeholder="Возраст" aria-label="Age">
-  </div>
+      <div class="mt-3">
+        <input formControlName="age" type="number" class="form-control" placeholder="Возраст" aria-label="Age">
+      </div>
 
-  <div class="mt-3">
-    <input type="text" class="form-control" placeholder="Адрес" aria-label="Address">
-  </div>
+      <div class="mt-3">
+        <input formControlName="address" type="text" class="form-control" placeholder="Адрес" aria-label="Address">
+      </div>
+    </div>
 
-  <div>
-    <button class="btn btn-primary mt-3"> Добавить </button>
-  </div>
+    <div>
+      <button class="btn btn-primary mt-3"> Добавить</button>
+    </div>
+  </form>
 </div>
