--- a/front-end/src/app/components/product-options/product-options.component.html
+++ b/front-end/src/app/components/product-options/product-options.component.html
@@ -1,17 +1,21 @@
 <div class="create-product">
-  <div class="mt-3">
-    <input type="text" class="form-control" placeholder="Наименование товара" aria-label="Name">
-  </div>
+  <form [formGroup]="productGroup" (ngSubmit)="add()">
+    <div formGroupName="product">
+      <div class="mt-3">
+        <input type="text" class="form-control" placeholder="Наименование товара" aria-label="Name">
+      </div>
 
-  <div class="mt-3">
-    <input type="number" class="form-control" placeholder="Цена" aria-label="Price">
-  </div>
+      <div class="mt-3">
+        <input type="number" class="form-control" placeholder="Цена" aria-label="Price">
+      </div>
 
-  <div class="mt-3">
-    <input type="number" class="form-control" placeholder="Готово к продаже" aria-label="In Stock">
-  </div>
+      <div class="mt-3">
+        <input type="number" class="form-control" placeholder="Готово к продаже" aria-label="In Stock">
+      </div>
+    </div>
 
-  <div>
-    <button class="btn btn-primary mt-3"> Добавить </button>
-  </div>
+    <div>
+      <button class="btn btn-primary mt-3"> Добавить</button>
+    </div>
+  </form>
 </div>
