get data form Closes #42

--- a/front-end/src/app/components/client-options/client-options.component.html
+++ b/front-end/src/app/components/client-options/client-options.component.html
@@ -2,7 +2,7 @@
   <form [formGroup]="clientGroup" (ngSubmit)="add()" class="login">
     <div formGroupName="client">
       <div class="mt-3" style="margin-bottom: 16px">
-        <input formControlName="userName" type="text" class="form-control" placeholder="Имя" aria-label="Full Name">
+        <input formControlName="name" type="text" class="form-control" placeholder="Имя" aria-label="Full Name">
       </div>
 
       <select formControlName="gender" class="form-select" aria-label="Default select example">
