--- a/front-end/src/app/components/client-options/client-options.component.html
+++ b/front-end/src/app/components/client-options/client-options.component.html
@@ -2,25 +2,25 @@
   <form [formGroup]="clientGroup" (ngSubmit)="add()" class="login">
     <div formGroupName="client">
       <div class="mt-3" style="margin-bottom: 16px">
-        <input formControlName="name" type="text" class="form-control" placeholder="Имя" aria-label="Full Name">
+        <input [value]="myClient.fullName" formControlName="name" type="text" class="form-control" placeholder="Имя" aria-label="Full Name">
       </div>
 
-      <select formControlName="gender" class="form-select" aria-label="Default select example">
+      <select [value]="myClient.gender" formControlName="gender" class="form-select" aria-label="Default select example">
         <option value="MALE">М</option>
         <option value="FEMALE">Ж</option>
       </select>
 
       <div class="mt-3">
-        <input formControlName="phone" type="text" class="form-control" placeholder="Номер телефона"
+        <input [value]="myClient.phone" formControlName="phone" type="text" class="form-control" placeholder="Номер телефона"
                aria-label="Phone Number">
       </div>
 
       <div class="mt-3">
-        <input formControlName="age" type="number" class="form-control" placeholder="Возраст" aria-label="Age">
+        <input [value]="myClient.age" formControlName="age" type="number" class="form-control" placeholder="Возраст" aria-label="Age">
       </div>
 
       <div class="mt-3">
-        <input formControlName="address" type="text" class="form-control" placeholder="Адрес" aria-label="Address">
+        <input [value]="myClient.address" formControlName="address" type="text" class="form-control" placeholder="Адрес" aria-label="Address">
       </div>
     </div>
 
