--- a/front-end/src/app/components/clients/clients.component.html
+++ b/front-end/src/app/components/clients/clients.component.html
@@ -26,7 +26,7 @@
     <td>{{client.dateCreated}}</td>
     <td>{{client.dateLastVisit}}</td>
     <td>
-      <button class="btn btn-success" routerLink="/client_options">Update</button>
+      <button class="btn btn-success" routerLink="/client_options/{{client.id}}">Update</button>
       <button class="btn btn-danger" (click)="deleteClient(client.id)">Delete</button>
     </td>
   </tr>
