--- a/front-end/src/app/components/product-options/product-options.component.html
+++ b/front-end/src/app/components/product-options/product-options.component.html
@@ -2,7 +2,7 @@
   <form [formGroup]="productGroup" (ngSubmit)="add()">
     <div formGroupName="product">
       <div class="mt-3">
-        <input [value]="myProduct.name" formControlName="name" type="text" class="form-control" placeholder="Наименование товара" aria-label="Name">
+        <input [value]="myProduct.name" formControlName="name" type="text" class="form-control" placeholder="Наименование товара" aria-label="name">
       </div>
 
       <div class="mt-3">
