--- a/front-end/src/app/components/register/register.component.html
+++ b/front-end/src/app/components/register/register.component.html
@@ -1,4 +1,5 @@
 <form [formGroup]="loginFormGroup" (ngSubmit)="OnSubmit()" class="login">
+  <div *ngIf="invalidMessage" class="alert alert-danger">{{invalidMessage}}</div>
   <div formGroupName="admin">
     <div class="mt-3">
       <input formControlName="username" type="text" class="form-control" placeholder="Username" aria-label="Username">
